syntax = "proto3";

option csharp_namespace = "Shared.Protos";

package character_master;

service CharacterMaster 
{
	rpc CreateCharacter (CreateCharacterRequest) returns (CreateCharacterReply);
}

message CreateCharacterRequest
{
	uint32 class = 1;
	uint32 rank = 2;
	uint32 face = 3;
	uint32 hairColor = 4;
	uint32 hairStyle = 5;
	uint32 aura = 6;
	uint32 gender = 7;
	uint32 showHelmet = 8;
	bool joinNoviceGuild = 9;
	uint32 slot = 10;
	string name = 11;
	uint32 accountId = 12;
	uint32 serverId = 13;
}

message CreateCharacterReply
{
	uint32 result = 1;
	uint32 charId = 2;
}